--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,6 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "types": [ "firebase" ],
-    "lib": [
-      "es2016",
-      "dom"
-    ]
+    "types": [ "firebase" ]
   }
 }
