start buildout of the filer pipe

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "types": [ "firebase" ]
+    "types": [ "firebase" ],
+    "lib": [
+      "es2016",
+      "dom"
+    ]
   }
 }
